# MediaPlayer

./: CMakeLists.txt  README.md
MediaAV/: CMakeLists.txt  MediaAV.h  MediaAVDecoder.cpp  MediaAVDecoderPrivate.h  MediaAVFrame.cpp  MediaAVFramePrivate.h  MediaAVPacket.cpp  MediaAVPacketPrivate.h  MediaAVReader.cpp  MediaAVReaderPrivate.h  MediaAVStream.cpp  MediaAVStreamPrivate.h  MediaAVTime.cpp
MediaPlayer/: CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  MediaPlayerCtr.cpp  MediaPlayerDecoderThread.cpp  MediaPlayerReaderThread.cpp
MediaPlayerTest/: CMakeLists.txt  Main.cpp
MediaQueue/: MediaQueue.h
MediaThread/: CMakeLists.txt  MediaThread.cpp  MediaThread.h
